# SparseTensorTrain

./: README.md
C_Code/: CMakeLists.txt  README.md
C_Code/include/: dtensor.h  external.h  header.h  sptensor.h  struct.h  util.h
C_Code/include/new/: core.h  external.h  functions.h  spmatrix.h  sptensor.h  structures.h  util.h  utils.h  utils.impl.h
C_Code/src/: ttsvd.cpp
C_Code/src/algo_test/: frostt_test.cpp  synthetic_test.cpp
C_Code/src/algorithm/: decomposition.cpp  hello.cu  interpolative.cpp  linalgUtils.cpp  sparseops.cpp  sparseops.cu  spinterpolative.cpp  sptensortrain.cpp  tensortrain.cpp  ttid.cpp  ttsvd.cpp
C_Code/src/csparse/: csparse.h
C_Code/src/real_test/: frostt_test.cpp  main.cpp
C_Code/src/synthetic_test/: dense_test.cpp  sparse_test.cpp
C_Code/src/unit_test/: unit_test_1.cpp  unit_test_2.cpp  unit_test_3.cpp  unit_test_4.cpp  unit_test_5.cpp
C_Code/src/util/: linalgUtils.cpp  timer.cpp
Julia_Code/: InterpolativeEx.jl  README.md  RandomTest.jl  SyntheticTest.jl  TTID.jl
Julia_Code/src/: FrosttTest.jl  InterpolativeEx.jl  SyntheticTest.jl  TTID.jl
Python_Code/: FrosttData.py  FrosttTest.py  RandomTest.py  STTSVD.py  Skeleton.py  SparseCP.py  SparseTT.py  SyntheticSparseTT.py  SyntheticTest.py  TTCross.py  TTSVD.py  Utils.py  interpolative.py
Python_Code/SparseTTCross/: FrosttSparse.py  RandomSparse.py  SyntheticSparse.py  TTCrossAlgo.py
Python_Code/landfill/: Skeleton.py  SparseTT.py  utils.py
Python_Code/legacy/: SparseCP.py  TTCross.py  interpolative.py
Python_Code/src/: FrosttTest.py  README.md  SyntheticTest.py  TensorOpTest.py  interpolative_decomposition.py  sparse_interpolative.py  sparse_lu.py  sparse_opt.py  tensortrain_decomposition.py  tensortrain_id.py  tensortrain_sparse.py  test_frostt.py  test_random.py  test_scfmolecule.py  test_synthetic.py  test_tensorop.py  utils.py
Python_Code/test/: README.md
TensorInterpDecomp.jl/src/: RandomTest.jl
